implement update user weight api